fix(sdk,cmdline): address PR review comments
- TokenSource.getToken: split into sendTokenRequest/retryWithNonce/
  applyTokenResponse/nonceForRetry to clear the SonarCloud cognitive-complexity
  gate; cache the DPoP-Nonce rotated on a failed retry response so a double
  rotation self-heals on the next call (RFC 9449 §8.2).
- SDKBuilder: replace the standalone dpopAlgorithm() setter with paired
  dpopKey(JWK) (infers algorithm) and dpopKey(JWK, JWSAlgorithm) overloads;
  resolveDpopMaterial delegates to resolveDpopAlgorithm.
- AuthInterceptor: drop the ThreadLocal URL handoff for a per-call closure-local
  and create a fresh interceptor per connect call (per-request contract);
  guard debug logging with isDebugEnabled.
- cmdline: use Files.readString for UTF-8 file reads.
- Tests: cover failed-retry nonce caching, per-call URL isolation, and the
  two-arg dpopKey overload.